--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-canvas {
-  background-color: aquamarine;
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
+body {
+  font-family: "Roboto", sans-serif;
 }
 .container {
   position: absolute;
@@ -7,18 +9,20 @@ canvas {
   left: 50%;
   transform: translate(-50%, -50%);
   border: 2px solid black;
+  padding: 2vw;
   display: flex;
   flex-direction: row;
+  background-color: rgb(29, 29, 29);
 }
 .tools {
   display: flex;
   flex-direction: column;
 }
 .butt {
-  background-color: crimson;
+  background-color: rgb(51, 51, 51);
   padding: 1vw;
-  margin: 1vw;
-}
-.butt:active() {
-  background-color: darkcyan;
+  margin: 2vw 2vw 1vw 0;
+  text-align: center;
+  color: #fff;
+  border-radius: 5px;
 }
